# id-chip-reader

./: .clang-format  CMakeLists.txt  Doxyfile  README.md  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  bac__application_8c.html  bac__application_8c.js  bac__application_8h.html  bac__application_8h.js  bac__application_8h_source.html  chip__reader_8c.html  chip__reader_8c.js  chip__reader_8h.html  chip__reader_8h.js  chip__reader_8h_source.html  classes.html  config.h.in  des_8c.html  des_8c.js  des_8h.html  des_8h.js  des_8h_source.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_313caf1132e152dd9b58bea13a4052ca.js  dir_33d951cc4565d7cdca16056a0c6f7383.html  dir_33d951cc4565d7cdca16056a0c6f7383.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_821002d4f10779a80d4fb17bc32f21f1.js  dir_92847ed163ef6f9ecdd02a07b6ac4527.html  dir_92847ed163ef6f9ecdd02a07b6ac4527.js  dir_a6f14b204945acfc5663c8adfd39e86e.html  dir_a6f14b204945acfc5663c8adfd39e86e.js  dir_bbc13ad43e2dd1fa7b2a97acf839132b.html  dir_bbc13ad43e2dd1fa7b2a97acf839132b.js  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.js  (+47 more)
example/: CMakeLists.txt  id_chip_reader_example.c
include/: chip_reader.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  (+38 more)
(+16 files in other folders)
